--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                </a>
             </li>
             <li class="nav-item">
-               <a href="/about-me.html" class="nav-link">
+               <a href="about-me.html" class="nav-link">
                   À propos de moi
                </a>
             </li>
             <li class="nav-item">
-               <a href="/my-work.html" class="nav-link">
+               <a href="my-work.html" class="nav-link">
                   Mes projets
                </a>
             </li>
             <li class="nav-item">
-               <a href="/contact.html" class="nav-link">
+               <a href="contact.html" class="nav-link">
                   Me contacter
                </a>
             </li>
