--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@
       <nav class="menu">
         <div class="menu-branding">
           <div>
-            <img src="../images/my-portrait.jpg">
+            <img src="images/my-portrait.jpg">
     
           </div>
         </div>
@@ -56,7 +56,7 @@
 
       <div class="bio-container">
         <div class="about-me-portrait">
-          <img src="../images/my-portrait.jpg" alt="Mathieu Enault" />
+          <img src="images/my-portrait.jpg" alt="Mathieu Enault" />
         </div>
         <div id="bio">
           Je m'apelles Mathieu Enault, j'ai 31 ans, j'ai éffectué une formation
