--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="menu">
          <div class="menu-branding">
             <div>
-               <img src="../images/my-portrait.jpg" >
+               <img src="images/my-portrait.jpg" >
 
             </div>
          </div>
