--- a/my-work.html
+++ b/my-work.html
@@ -27,7 +27,7 @@
     <nav class="menu">
         <div class="menu-branding">
             <div>
-                <img src="../images/my-portrait.jpg">
+                <img src="images/my-portrait.jpg">
 
             </div>
         </div>
@@ -64,56 +64,56 @@
     <div class="projects">
       <div class="item">
         <a href="https://github.com/Mathieu94110/BlaBlaSport">
-          <img src="../images/Maquette1min.png" alt="" />
+          <img src="images/Maquette1min.png" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="https://github.com/Mathieu94110/pokedex">
-          <img src="../images/data_viz.jpg" alt="" />
+          <img src="images/data_viz.jpg" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="https://github.com/Mathieu94110/To-do-list-">
-          <img src="../images/Maquette3min.png" alt="" />
+          <img src="images/Maquette3min.png" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="">
-          <img src="../images/GSAP.png" alt="" />
+          <img src="images/GSAP.png" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="">
-          <img src="../images/Maquette5min.png" alt="" />
+          <img src="images/Maquette5min.png" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="">
-          <img src="../images/pokedex.jpg" alt="" />
+          <img src="images/pokedex.jpg" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="">
-          <img src="../images/to-do-list.jpg" alt="" />
+          <img src="images/to-do-list.jpg" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
       </div>
       <div class="item">
         <a href="">
-          <img src="../images/Mon-site.jpg" alt="" />
+          <img src="images/Mon-site.jpg" alt="" />
         </a>
         <a href="" class="btn-light"> <i class="fas fa-eye"></i>Project </a>
         <a href="" class="btn-dark"> <i class="fab fa-github"></i>Ghithub </a>
