--- a/about-me.html
+++ b/about-me.html
@@ -27,22 +27,22 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="/" class="nav-link">
+            <a href="" class="nav-link">
               Accueil
             </a>
           </li>
           <li class="nav-item">
-            <a href="/about-me.html" class="nav-link">
+            <a href="about-me.html" class="nav-link">
               À propos de moi
             </a>
           </li>
           <li class="nav-item">
-            <a href="/my-work.html" class="nav-link">
+            <a href="my-work.html" class="nav-link">
               Mes projets
             </a>
           </li>
           <li class="nav-item">
-            <a href="/contact.html" class="nav-link">
+            <a href="contact.html" class="nav-link">
               Me contacter
             </a>
           </li>
